# keypad

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  Readme.txt  idf_component.yml  sdkconfig  sdkconfig.old
Docs/: Debouncing-algo.txt
components/common/: event_def.h
components/gpio_interface/: gpio_interface.h
components/gpio_interface_gpio_impl/: CMakeLists.txt  Readme.txt  my_gpio.c  my_gpio.h
components/gpio_interface_gpio_impl/test/: CMakeLists.txt  test_my_gpio.c
components/keyboard_impl/: idf_component.yml  keypad_dev.c  keypad_dev.h
components/timer_impl/: my_timer.c  my_timer.h
components/timer_impl/test/: test_timer.c
components/timer_interface/: timer_interface.h
examples/simple/: CMakeLists.txt  sdkconfig.defaults
examples/simple/main/: CMakeLists.txt  main.c
include/: esp_keypad_nkro.h  matrix_keypad_nkro.h  matrix_keypad_pwm.h
main/: CMakeLists.txt  keypad_test.c  timer_test.c
private/: matrix_keypad_config_defaults.h
private/init_privs/: init.c  init.h
private/keypad-button/keypad-button/: keypad_button.c  keypad_button.h
private/pool_allocator/pool_alloc_queue_impl/: pool_queue.c
private/prober/interleaved-pwm/: interleaved_pwm.c  interleaved_pwm.h
private/prober/probe-manager/: probe_manager.c
private/prober/pwm-line/: pwm_line.c  pwm_line.h
private/scan-line/pwm-capture/: pwm_capture.docx  ~$m_capture.docx
private/scanner/pulse-decoder/: pulse_decoder.c  pulse_decoder.h
private/scanner/scan-manager/: scan_manager.c  scan_manager.h
private/timer/timer_impl/: my_timer.c  my_timer.h
src/: esp_keypad_nkro.c  matrix_keypad_nkro.c  matrix_keypad_pwm.c
test/: CMakeLists.txt  sdkconfig  sdkconfig.old  test_keypad_nkro.c
test/main/: CMakeLists.txt  main_test.c
test_app/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
test_app/main/: CMakeLists.txt  Kconfig  main_test.c
